force-app/main/default/objects/ClientProduct__c/ClientProduct__c.object-meta.xml
<CustomObject>
    <label>ClientProduct</label>
    <nameField>
        <displayFormat>PROD-{00000}</displayFormat>
        <label>ClientProductName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClientProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>