force-app/main/default/objects/ClientProduct__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <label>ActivationDate</label>
    <type>Date</type>
</CustomField>