force-app/main/default/objects/ClientProduct__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>FinancialService__c</referenceTo>
    <relationshipLabel>ClientProducts</relationshipLabel>
    <relationshipName>ClientProducts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>